k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petik-backend-api-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: petik-backend-api
