k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petik-backend-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: petik-gke-ip
    networking.gke.io/managed-certificates: petik-backend-api-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: petik-backend-api-service
      port:
        number: 80
  rules:
    - host: "petik.xyz"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: petik-backend-api-service
                port:
                  number: 80
